Not sure how to sem-ver this... Was last at 1.3.4 so going to 1.3.5 but no idea what's changed.
¯\_(ツ)_/¯

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "com.phonegap.plugins.Puship",
-  "version": "com.phonegap.plugins.Puship",
+  "version": "1.3.5",
   "description": "https://github.com/oisin-corppop/PushPlugin",
   "license": "MIT"
 }
