--- a/plugin.xml
+++ b/plugin.xml
@@ -67,7 +67,7 @@
 		<source-file src="src/android/com/plugin/gcm/GCMIntentService.java" target-dir="src/com/plugin/gcm/" />
 		<source-file src="src/android/com/plugin/gcm/PushHandlerActivity.java" target-dir="src/com/plugin/gcm/" />
 		<source-file src="src/android/com/plugin/gcm/PushPlugin.java" target-dir="src/com/plugin/gcm/" />
-		<source-file src="src/android/com/plugin/android-support-v13.jar" target-dir="libs/" />
+		<framework src="com.android.support:support-v4:24.1.1+" />
 
 	</platform>
 
@@ -81,7 +81,7 @@
             <preference name="showmessageinnotification" value="true" />
             <preference name="defaultnotificationmessage" value="You have a new message." />
 		</config-file>
-        
+
         <config-file target="AndroidManifest.xml" parent="/manifest">
             <!-- This permission ensures that no other application can intercept your ADM messages. "[YOUR PACKAGE NAME]" is your package name as defined in your <manifest> tag. -->
             <permission android:name="$PACKAGE_NAME.permission.RECEIVE_ADM_MESSAGE" android:protectionLevel="signature" />
@@ -105,13 +105,13 @@
                     <action android:name="com.amazon.device.messaging.intent.RECEIVE" />
                     <category android:name="$PACKAGE_NAME" />
                 </intent-filter>
-            </receiver>		
+            </receiver>
         </config-file>
-        
+
         <source-file src="src/amazon/PushPlugin.java" target-dir="src/com/amazon/cordova/plugin" />
         <source-file src="src/amazon/ADMMessageHandler.java" target-dir="src/com/amazon/cordova/plugin" />
         <source-file src="src/amazon/ADMHandlerActivity.java" target-dir="src/com/amazon/cordova/plugin" />
-       		
+
 	</platform>
 
 	<!-- ios -->
@@ -127,7 +127,7 @@
 		<source-file src="src/ios/PushPlugin.m" />
 
 		<header-file src="src/ios/AppDelegate+notification.h" />
-		<header-file src="src/ios/PushPlugin.h" />		
+		<header-file src="src/ios/PushPlugin.h" />
 
 		<resource-file src="www/res/sounds/abduction.mp3" target="Resources/abduction.mp3" />
 		<resource-file src="www/res/sounds/ache.mp3" target="Resources/ache.mp3" />
